# labs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: vs_rust_bio.rs
cyanea-align/: Cargo.toml  README.md
cyanea-align/benches/: align.rs  simd.rs
cyanea-align/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-align/src/: batch.rs  cigar.rs  gpu.rs  lcsk.rs  lib.rs  minimizers.rs  msa.rs  needleman_wunsch.rs  pair_hmm.rs  poa.rs  profile_hmm.rs  scoring.rs  seed_extend.rs  semi_global.rs  simd.rs  simd_sw.rs  smith_waterman.rs  spliced.rs  types.rs  wfa.rs  xdrop.rs
cyanea-chem/: Cargo.toml  README.md
cyanea-chem/benches/: chem.rs
cyanea-chem/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-chem/fuzz/: Cargo.toml
cyanea-chem/src/: canon.rs  conformer.rs  descriptors.rs  druglikeness.rs  element.rs  embed.rs  fingerprint.rs  forcefield.rs  gasteiger.rs  lib.rs  maccs.rs  metabolomics.rs  molecule.rs  properties.rs  reaction.rs  ring.rs  scaffold.rs  sdf.rs  smarts.rs  smiles.rs  standardize.rs  stereo.rs  substructure.rs
cyanea-core/: Cargo.toml  README.md
cyanea-core/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-core/src/: bitvec.rs  compress.rs  error.rs  fenwick.rs  hash.rs  lib.rs  mmap.rs  prob.rs  traits.rs
cyanea-datasets/: Cargo.toml
cyanea-datasets/docs/: API.md  ARCHITECTURE.md  GUIDE.md
cyanea-datasets/src/: alignment.rs  chemistry.rs  epigenomics.rs  genomics.rs  lib.rs  metagenomics.rs  phylogenetics.rs  protocols.rs  single_cell.rs  structural.rs
cyanea-epi/: Cargo.toml
cyanea-epi/docs/: API.md  ARCHITECTURE.md  GUIDE.md
cyanea-epi/src/: accessibility.rs  chromatin.rs  differential.rs  error.rs  lib.rs  motifs.rs  nucleosome.rs  peaks.rs  pileup.rs
cyanea-epi/tests/: chromatin_test.rs  differential_test.rs  motifs_test.rs  peaks_test.rs
cyanea-gpu/: Cargo.toml  README.md
cyanea-gpu/benches/: gpu.rs
cyanea-gpu/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-gpu/src/: backend.rs  buffer.rs  cpu.rs  cuda.rs  kmer.rs  lib.rs  metal.rs  minhash_gpu.rs  ops.rs  smith_waterman.rs  wgpu_backend.rs
cyanea-io/: Cargo.toml  README.md
cyanea-io/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-io/fuzz/: Cargo.toml
cyanea-io/src/: abi.rs  bam.rs  bam_ops.rs  bcf.rs  bcf_write.rs  bed.rs  bedgraph.rs  bedpe.rs  bgzf.rs  bigwig.rs  blast.rs  blast_xml.rs  clustal.rs  cram.rs  csv.rs  embl.rs  fcs.rs  fetch.rs  genbank.rs  gfa.rs  gff.rs  gtf.rs  indexed_bam.rs  indexed_vcf.rs  lib.rs  maf.rs  microarray.rs  parquet.rs  phylip.rs  pileup.rs  pir.rs  sam.rs  stockholm.rs  variant_call.rs  vcf.rs  vcf_header.rs  vcf_ops.rs
cyanea-meta/: Cargo.toml
cyanea-meta/docs/: API.md  ARCHITECTURE.md  GUIDE.md
cyanea-meta/src/: assembly.rs  binning.rs  composition.rs  diversity.rs  error.rs  functional.rs  lib.rs  profile.rs  taxonomy.rs
cyanea-meta/tests/: binning_test.rs  composition_test.rs  diversity_test.rs  profile_test.rs  taxonomy_test.rs
cyanea-ml/: Cargo.toml  README.md
cyanea-ml/benches/: ml.rs
cyanea-ml/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-ml/src/: blas_pca.rs  cluster.rs  cross_validation.rs  distance.rs  embedding.rs  encoding.rs  evaluate.rs  feature_selection.rs  forest.rs  gbdt.rs  hmm.rs  inference.rs  kmer.rs  lib.rs  metrics.rs  normalize.rs  reduction.rs  tree.rs  umap.rs
cyanea-network/: Cargo.toml
cyanea-network/docs/: API.md  ARCHITECTURE.md  GUIDE.md
cyanea-network/src/: community.rs  formats.rs  graph.rs  grn.rs  lib.rs  pathway.rs  ppi.rs  topology.rs
cyanea-omics/: Cargo.toml  README.md
cyanea-omics/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-omics/src/: acmg.rs  annotation.rs  clinical.rs  cnv.rs  coverage.rs  crispr.rs  expr.rs  genome_arithmetic.rs  genomic.rs  h5ad.rs  haplotype.rs  hic.rs  interval.rs  interval_tree.rs  lib.rs  liftover.rs  methylation.rs  microarray.rs  network.rs  otu.rs  pharmacogenomics.rs  sc_batch.rs  sc_cluster.rs  sc_integrate.rs  sc_markers.rs  sc_mtx.rs  sc_preprocess.rs  sc_trajectory.rs  sc_velocity.rs  single_cell.rs  sparse.rs  spatial.rs  spatial_cellchat.rs  spatial_deconvolution.rs  spatial_domains.rs  spatial_platforms.rs  spatial_segmentation.rs  variant.rs  variant_annotation.rs  zarr.rs
cyanea-phylo/: Cargo.toml  README.md
cyanea-phylo/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-phylo/fuzz/: Cargo.toml
cyanea-phylo/src/: bootstrap.rs  compare.rs  consensus.rs  construct.rs  dating.rs  distance.rs  drawing.rs  generic_likelihood.rs  lib.rs  likelihood.rs  marginal.rs  mcmc.rs  model_selection.rs  models.rs  newick.rs  nexus.rs  protein_models.rs  reconstruct.rs  simulation.rs  species_tree.rs  subst_model.rs  tree.rs  tree_search.rs  unifrac.rs
cyanea-proteomics/: Cargo.toml
cyanea-proteomics/docs/: API.md  ARCHITECTURE.md  GUIDE.md
cyanea-proteomics/src/: error.rs  fdr.rs  lib.rs  mgf.rs  mzml.rs  mztab.rs  peptide.rs  protein.rs  quantification.rs  search.rs  spectrum.rs
cyanea-proteomics/tests/: fdr_tests.rs  quant_tests.rs  search_tests.rs  spectrum_tests.rs
cyanea-py/: Cargo.toml  README.md  pyproject.toml
cyanea-py/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-py/src/: align.rs  chem.rs  core_utils.rs  error.rs  io.rs  lib.rs  ml.rs  omics.rs  phylo.rs  sc.rs  seq.rs  stats.rs  struct_bio.rs
cyanea-seq/: Cargo.toml  README.md
cyanea-seq/benches/: seq.rs
cyanea-seq/docs/: API.md  ARCHITECTURE.md  GUIDE.md  STATUS.md
cyanea-seq/src/: alphabet.rs  assembly.rs  bwt.rs  codon.rs  debruijn.rs  fasta.rs  fasta_index.rs  fastq.rs  fm_index.rs  fmd_index.rs  kmer.rs  lib.rs  longread.rs  masking.rs  minhash.rs  motif.rs  motif_io.rs  nanopore.rs  orf.rs  paired.rs  pattern.rs  protein_properties.rs  pssm.rs  quality.rs  read_sim.rs  restriction.rs  seq.rs  (+8 more)
cyanea-stats/: Cargo.toml  README.md
cyanea-struct/: Cargo.toml  README.md
cyanea-wasm/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
(+99 files in other folders)
