[workspace]
members = [
    "cyanea-core",
    "cyanea-seq",
    "cyanea-io",
    "cyanea-align",
    "cyanea-omics",
    "cyanea-stats",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyanea-io/cyanea"
rust-version = "1.75"

[workspace.dependencies]
# Error handling
thiserror = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Memory mapping
memmap2 = "0.9"

# Bioinformatics
needletail = "0.5"

# File formats
csv = "1.3"

# Testing
tempfile = "3"
