[workspace]
members = [
    "cyanea-core",
    "cyanea-seq",
    "cyanea-io",
    "cyanea-align",
    "cyanea-omics",
    "cyanea-stats",
    "cyanea-ml",
    "cyanea-chem",
    "cyanea-struct",
    "cyanea-phylo",
    "cyanea-gpu",
    "cyanea-wasm",
    "cyanea-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cyanea-io/cyanea"
rust-version = "1.93"

[workspace.dependencies]
# Error handling
thiserror = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Memory mapping
memmap2 = "0.9"

# Bioinformatics
needletail = "0.5"

# File formats
csv = "1.3"

# Parallelism
rayon = "1.10"

# Linear algebra (optional BLAS backend)
ndarray = "0.16"

# GPU
metal-rs = { package = "metal", version = "0.33" }
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "fallback-dynamic-loading", "cuda-12060"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing
proptest = "1"

# HDF5
hdf5 = "0.8"

# Parquet / Arrow
parquet = { version = "54", default-features = false, features = ["arrow"] }
arrow = { version = "54", default-features = false, features = ["prettyprint"] }

# CRAM / SAM (noodles) — versions must align with noodles-cram's transitive deps
noodles-cram = "0.72"
noodles-sam = "0.67"
noodles-fasta = "0.46"
noodles-core = "0.15"

# Zarr
zarrs = { version = "0.18", default-features = false, features = ["filesystem"] }

# Testing
tempfile = "3"
