[package]
name = "cyanea-align"
description = "Sequence alignment algorithms for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]
cuda = []
metal = []

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
serde = { workspace = true, optional = true }
