[package]
name = "cyanea-align"
description = "Sequence alignment algorithms for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std", "simd"]
std = []
simd = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]
cuda = []
metal = []
parallel = ["dep:rayon"]

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "align"
harness = false
