[package]
name = "cyanea-chem"
description = "Chemistry and small molecules for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []
wasm = []

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
