[package]
name = "cyanea-chem"
description = "Chemistry and small molecules for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "chem"
harness = false
