[package]
name = "cyanea-core"
description = "Shared primitives, traits, and utilities for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "genomics", "biology", "science", "comp-bio"]
categories = ["science"]

[features]
default = ["std"]
std = ["memmap2", "zstd", "flate2"]
wasm = []
serde = ["dep:serde"]

[dependencies]
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
