[package]
name = "cyanea-gpu"
description = "GPU compute abstraction (CUDA/Metal) for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "gpu", "cuda", "metal", "compute"]
categories = ["science"]

[features]
default = []
cuda = ["dep:cudarc"]
metal = ["dep:metal-rs"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
serde = ["dep:serde", "cyanea-core/serde"]
parallel = ["dep:rayon"]

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
metal-rs = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
wgpu = { version = "24", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "gpu"
harness = false
