[package]
name = "cyanea-gpu"
description = "GPU compute abstraction (CUDA/Metal) for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "gpu", "cuda", "metal", "compute"]
categories = ["science"]

[features]
default = []
cuda = ["dep:cudarc"]
metal = ["dep:metal-rs"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
serde = ["dep:serde", "cyanea-core/serde"]
parallel = ["dep:rayon"]

[dependencies]
cyanea-core = { path = "../cyanea-core", version = "0.1.0", default-features = false }
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
metal-rs = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"], optional = true }
pollster = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "gpu"
harness = false
