[package]
name = "cyanea-ml"
description = "ML primitives for bio (embeddings, etc.) for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "machine-learning", "clustering", "embeddings", "dimensionality-reduction"]
categories = ["science", "algorithms"]

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]
parallel = ["dep:rayon"]
blas = ["dep:ndarray"]

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ml"
harness = false
