[package]
name = "cyanea-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Network and pathway biology for the Cyanea bioinformatics ecosystem"
keywords = ["bioinformatics", "network", "pathway", "graph", "ppi"]
categories = ["science"]

[dependencies]
cyanea-core = { path = "../cyanea-core" }
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
