[package]
name = "cyanea-omics"
description = "Omics data structures for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "genomics", "variants", "intervals", "omics"]
categories = ["science"]

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
serde = { workspace = true, optional = true }
