[package]
name = "cyanea-omics"
description = "Omics data structures for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "genomics", "variants", "intervals", "omics"]
categories = ["science"]

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]
h5ad = ["dep:hdf5", "dep:ndarray"]
zarr = ["dep:zarrs", "dep:serde_json"]
single-cell = ["dep:cyanea-stats", "dep:cyanea-ml"]

[dependencies]
cyanea-core = { path = "../cyanea-core", version = "0.1.0", default-features = false }
cyanea-stats = { path = "../cyanea-stats", version = "0.1.0", optional = true, default-features = false }
cyanea-ml = { path = "../cyanea-ml", version = "0.1.0", optional = true, default-features = false }
serde = { workspace = true, optional = true }
hdf5 = { workspace = true, optional = true }
ndarray = { version = "0.15", optional = true }
zarrs = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
