[package]
name = "cyanea-phylo"
description = "Phylogenetics and trees for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]
ml = ["dep:cyanea-ml"]

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
serde = { workspace = true, optional = true }
cyanea-ml = { path = "../cyanea-ml", default-features = false, optional = true }
