[package]
name = "cyanea-phylo"
description = "Phylogenetics and trees for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "phylogenetics", "newick", "evolution", "tree"]
categories = ["science"]

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]
ml = ["dep:cyanea-ml"]
parallel = ["dep:rayon"]

[dependencies]
cyanea-core = { path = "../cyanea-core", version = "0.1.0", default-features = false }
serde = { workspace = true, optional = true }
cyanea-ml = { path = "../cyanea-ml", version = "0.1.0", default-features = false, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
