[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cyanea"
version = "0.1.0"
description = "Python bindings for the Cyanea bioinformatics ecosystem"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cyanea"
