[package]
name = "cyanea-seq"
description = "Sequence I/O and manipulation for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "dna", "fasta", "fastq", "kmer"]
categories = ["science"]

[features]
default = ["std"]
std = []
wasm = []
minhash = []
serde = ["dep:serde", "cyanea-core/serde"]

[dependencies]
cyanea-core = { path = "../cyanea-core", default-features = false }
needletail = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "seq"
harness = false
