[package]
name = "cyanea-stats"
description = "Statistical methods for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "statistics", "hypothesis-testing", "pca", "correlation"]
categories = ["science", "mathematics"]

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]
parallel = ["dep:rayon"]
blas = ["dep:ndarray"]

[dependencies]
cyanea-core = { path = "../cyanea-core", version = "0.1.0", default-features = false }
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "stats"
harness = false
