[package]
name = "cyanea-struct"
description = "Protein and nucleic acid 3D structures for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "protein-structure", "pdb", "mmcif", "structural-biology"]
categories = ["science"]

[features]
default = ["std"]
std = []
wasm = []
serde = ["dep:serde", "cyanea-core/serde"]
parallel = ["dep:rayon", "std"]

[dependencies]
cyanea-core = { path = "../cyanea-core", version = "0.1.0", default-features = false }
sha2  = { workspace = true }
hex   = { workspace = true }
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "struct_bio"
harness = false
