[package]
name = "cyanea-wasm"
description = "WASM bindings and browser runtime for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cyanea-core  = { path = "../cyanea-core",  default-features = false, features = ["serde"] }
cyanea-seq   = { path = "../cyanea-seq",   default-features = false, features = ["serde"] }
cyanea-io    = { path = "../cyanea-io",    default-features = false }
cyanea-align = { path = "../cyanea-align", default-features = false, features = ["serde"] }
cyanea-stats = { path = "../cyanea-stats", default-features = false }
cyanea-ml    = { path = "../cyanea-ml",    default-features = false }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
