[package]
name = "cyanea-wasm"
description = "WASM bindings and browser runtime for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "wasm", "webassembly", "browser", "bindings"]
categories = ["wasm", "science"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
cyanea-core  = { path = "../cyanea-core",  default-features = false, features = ["serde", "std"] }
cyanea-seq   = { path = "../cyanea-seq",   default-features = false, features = ["serde"] }
cyanea-io    = { path = "../cyanea-io",    default-features = false }
cyanea-align = { path = "../cyanea-align", default-features = false, features = ["serde"] }
cyanea-stats = { path = "../cyanea-stats", default-features = false }
cyanea-ml    = { path = "../cyanea-ml",    default-features = false }
cyanea-chem   = { path = "../cyanea-chem",   default-features = false, features = ["serde"] }
cyanea-struct = { path = "../cyanea-struct", default-features = false, features = ["serde"] }
cyanea-phylo  = { path = "../cyanea-phylo", default-features = false, features = ["serde", "ml"] }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }
