[package]
name = "cyanea-wasm"
description = "WASM bindings and browser runtime for the Cyanea bioinformatics ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["bioinformatics", "wasm", "webassembly", "browser", "bindings"]
categories = ["wasm", "science"]
publish = false

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies]
cyanea-core  = { path = "../cyanea-core",  version = "0.1.0", default-features = false, features = ["serde", "std"] }
cyanea-seq   = { path = "../cyanea-seq",   version = "0.1.0", default-features = false, features = ["serde", "minhash"] }
cyanea-io    = { path = "../cyanea-io",    version = "0.1.0", default-features = false, features = ["sam", "vcf", "bed", "gff", "blast-xml", "bedgraph", "gfa", "fetch"] }
cyanea-omics = { path = "../cyanea-omics", version = "0.1.0", default-features = false, features = ["serde", "single-cell"] }
cyanea-align = { path = "../cyanea-align", version = "0.1.0", default-features = false, features = ["serde"] }
cyanea-stats = { path = "../cyanea-stats", version = "0.1.0", default-features = false }
cyanea-ml    = { path = "../cyanea-ml",    version = "0.1.0", default-features = false }
cyanea-chem   = { path = "../cyanea-chem",   version = "0.1.0", default-features = false, features = ["serde"] }
cyanea-struct = { path = "../cyanea-struct", version = "0.1.0", default-features = false, features = ["serde"] }
cyanea-phylo  = { path = "../cyanea-phylo", version = "0.1.0", default-features = false, features = ["serde", "ml"] }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }
