[package]
name = "cyanea-io-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"

[dependencies.cyanea-io]
path = ".."
features = ["csv", "vcf", "bed", "gff"]

[[bin]]
name = "fuzz_vcf"
path = "fuzz_targets/fuzz_vcf.rs"
doc = false

[[bin]]
name = "fuzz_bed"
path = "fuzz_targets/fuzz_bed.rs"
doc = false

[[bin]]
name = "fuzz_gff3"
path = "fuzz_targets/fuzz_gff3.rs"
doc = false

[workspace]
members = ["."]
