[package]
name = "cyanea-phylo-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cyanea-phylo]
path = ".."

[[bin]]
name = "fuzz_newick"
path = "fuzz_targets/fuzz_newick.rs"
doc = false

[[bin]]
name = "fuzz_nexus"
path = "fuzz_targets/fuzz_nexus.rs"
doc = false

[workspace]
members = ["."]
